[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Global.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Textbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/DialogTree.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "music_fade_out"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1.02837 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Global" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[node name="Textbox" parent="." instance=ExtResource( 4 )]

[node name="Pause" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="DialogTree" type="Node" parent="."]
script = ExtResource( 5 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[node name="MusicFadeOut" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/music_fade_out = SubResource( 2 )

[connection signal="animation_finished" from="MusicFadeOut" to="." method="_on_MusicFadeOut_animation_finished"]
